updated upload cargo data test case